docs: update CHANGELOG and optimize CI/CD triggers
- Add CI/CD pipeline fixes section to CHANGELOG
- Configure workflows to ignore documentation files
- Prevent unnecessary pipeline runs for .md, docs, and config files
- Optimize resource usage for documentation-only changes

🔧 CI/CD optimizations:
- paths-ignore for *.md, docs/**, README, CHANGELOG, CONTRIBUTING
- Apply to both ci.yml and deploy.yml workflows
- Maintain code quality while reducing pipeline overhead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,26 @@ name: 🚀 CI/CD Pipeline
 on:
     push:
         branches: [main, develop]
+        paths-ignore:
+            - '*.md'
+            - 'docs/**'
+            - '.github/**/*.md'
+            - 'CHANGELOG.md'
+            - 'README.md'
+            - 'CONTRIBUTING.md'
+            - 'LICENSE'
+            - '.gitignore'
     pull_request:
         branches: [main, develop]
+        paths-ignore:
+            - '*.md'
+            - 'docs/**'
+            - '.github/**/*.md'
+            - 'CHANGELOG.md'
+            - 'README.md'
+            - 'CONTRIBUTING.md'
+            - 'LICENSE'
+            - '.gitignore'
 
 jobs:
     # Job 1: Lint and Type Check
