--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@
 # testing
 /coverage
 
+# playwright testing
+/test-results/
+/playwright-report/
+/playwright/.cache/
+
 # next.js
 /.next/
 /out/
