fix: code formatting and quote consistency
- Standardize quote usage across React components
- Apply consistent formatting to app/page.tsx and app/help/page.tsx
- Update deploy.yml workflow configuration
- Ensure ESLint compliance and code consistency

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,14 +4,14 @@ on:
     push:
         branches: [main]
         paths-ignore:
-            - '*.md'
-            - 'docs/**'
-            - '.github/**/*.md'
-            - 'CHANGELOG.md'
-            - 'README.md'
-            - 'CONTRIBUTING.md'
-            - 'LICENSE'
-            - '.gitignore'
+            - "*.md"
+            - "docs/**"
+            - ".github/**/*.md"
+            - "CHANGELOG.md"
+            - "README.md"
+            - "CONTRIBUTING.md"
+            - "LICENSE"
+            - ".gitignore"
     workflow_run:
         workflows: ["🚀 CI/CD Pipeline"]
         branches: [main]
